--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" 
-		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-	</head>
+	<head th:replace="~{base :: head}"></head>
+	
 	<body>
+		<div th:replace="~{base :: logo}"></div>
+		
 		<div class="container">
 		
-			<div class="jumbotron mb-0">
-				<h1 class="display-4">My Orders</h1>
-			</div>
+			<div th:replace="~{base :: maintitle('My Orders')}"></div>
 		
 			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
 				<div class="navbar-nav">
@@ -21,11 +16,17 @@
 					<a class="nav-item nav-link" href="">Approved</a>
 					<a class="nav-item nav-link" href="">Delivered</a>
 				</div>
-				<a href="order/product"><button class="btn btn-outline-secondary my-2 my-sm-0">New</button></a>
+				<a href="order/newProductForm"><button class="btn btn-outline-secondary my-2 my-sm-0">New</button></a>
 			</nav>
 		
-			<div class="card" th:each="product : ${productList}">
-				<div class="card-header" th:text=${product.productName}></div>
+			<div class="card mb-3" th:each="product : ${productList}">
+				
+				<th:block th:switch="${product.orderStatus.name()}">
+					<div th:case="'WAITING'" class="card-header alert-warning" th:text=${product.productName}></div>
+					<div th:case="'APPROVED'" class="card-header alert-success" th:text=${product.productName}></div>
+					<div th:case="'DELIVERED'" class="card-header alert-dark" th:text=${product.productName}></div>
+				</th:block>
+				
 				<div class="card-body">
 					<div class="row">
 						
