--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -19,11 +19,26 @@
 		</style>
 	</head>
 
-		<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-			<span class="logo">Spring App Example - Product Orders</span>
-			<span class="mt-3">Login</span>
+		<div th:fragment="logo">		
+			<div class="d-flex justify-content-between logo-container p-3">
+				<span class="logo ml-2">Order Manager</span>
+				<span class="mt-3">
+					<a class="text-light" sec:authorize="!isAuthenticated()" href="/login">Login</a>
+					<a onClick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">Logout</a>
+					<form id="form-login" th:action="@{/logout}" method="POST" hidden></form>
+				</span>
+			</div>
+				
+			<div class="row" sec:authorize="isAuthenticated()">
+				<div class="col">
+					<nav class="nav">
+					  <a class="nav-link" th:href="@{/home}">Home</a>
+					  <a class="nav-link" th:href="@{/user/orders}">My Orders</a>
+					</nav>
+				</div>
+			</div>
 		</div>
 
-			<div th:fragment="maintitle(value)" class="jumbotron mb-0">
+			<div th:fragment="maintitle(value)" class="jumbotron mb-3">
 				<h1 class="display-4" th:text="${value}"></h1>
 			</div>
