--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,32 +7,10 @@
 		
 		<div class="container">
 		
-			<div th:replace="~{base :: maintitle('My Orders')}"></div>
-		
-			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
-				<div class="navbar-nav">
-				
-					<!-- "classappend" is the way of Thymeleaf append a CSS class to the 
-					HTML component. Looks like something weird, but that is ok. 
-					Here we are making the front-end by the back-end. So, using
-					a conditional thymeleaf command, we define the active
-					HTML component. -->
-					
-					<a th:classappend="${status} == null ? 'active'" class="nav-item nav-link" href="/home">All</a>
-					<a th:classappend="${status} == 'waiting' ? 'active'" class="nav-item nav-link" href="/home/waiting">Waiting</a>
-					<a th:classappend="${status} == 'approved' ? 'active'" class="nav-item nav-link" href="/home/approved">Approved</a>
-					<a th:classappend="${status} == 'delivered' ? 'active'" class="nav-item nav-link" href="/home/delivered">Delivered</a>
-				</div>
-				<a href="order/newProductForm"><button class="btn btn-outline-secondary my-2 my-sm-0">New</button></a>
-			</nav>
+			<div th:replace="~{base :: maintitle('Recent Orders')}"></div>
 		
 			<div class="card mb-3" th:each="product : ${productList}">
-				
-				<th:block th:switch="${product.orderStatus.name()}">
-					<div th:case="'WAITING'" class="card-header alert-warning" th:text=${product.productName}></div>
-					<div th:case="'APPROVED'" class="card-header alert-success" th:text=${product.productName}></div>
-					<div th:case="'DELIVERED'" class="card-header alert-dark" th:text=${product.productName}></div>
-				</th:block>
+				<div class="card-header alert-dark" th:text=${product.productName}></div>
 				
 				<div class="card-body">
 					<div class="row">
