Enabled cache in the project. Added a Rest API for waiting products. Added the Offers page.

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -34,6 +34,7 @@
 					<nav class="nav">
 					  <a class="nav-link" th:href="@{/home}">Home</a>
 					  <a class="nav-link" th:href="@{/user/orders}">My Orders</a>
+					  <a class="nav-link" th:href="@{/offers}">Make your Offer</a>
 					</nav>
 				</div>
 			</div>
