--- a/src/main/resources/templates/offers/home.html
+++ b/src/main/resources/templates/offers/home.html
@@ -27,15 +27,29 @@
 							Each row have 12 columns.
 						  -->
 						<div class="col-12 col-sm-8 mb-3">
-							<div class="row">
-								<div class="col-md-5">Value: <input/></div>
-								<div class="col-md-7">Delivery date: <input/></div>
-							</div>
-
 							<div>Product</div>
 							<div><a v-bind:href="productOrder.productUrl">{{productOrder.productName}}</a></div>
 							<div>Description</div>
-							<div><textarea class="form-control">{{productOrder.description}}</textarea></div>
+							<div><textarea disabled="disabled" class="form-control">{{productOrder.description}}</textarea></div>
+							<div class="row mt-3">
+								<!-- How to use vue on inputs with 'v-model' -->
+								<div class="col-md-5">
+									<label>Value:</label> 
+									<input class="form-control" v-model="productOrder.productValue"/>
+								</div>
+								<div class="col-md-7">
+									<label>Delivery date:</label> 
+									<input class="form-control" v-model="productOrder.deliveryDate"/>
+								</div>
+							</div>
+							<div class="mt-2">
+								<label>Comment:</label>
+								<textarea class="form-control" v-model="productOrder.comment"></textarea>
+							</div>
+							<!-- Using Vue on button action with 'v-on:click' 
+							v-if for conditional using offerRegistered as a runtime variable.-->
+							<button v-if="productOrder.offerRegistered" class="btn btn-success mt-3">Offer Registered</button>
+							<button v-else="" v-on:click="registerOffer(productOrder)" class="btn btn-primary mt-3">Register Offer</button>
 						</div>
 						<div class="col-12 col-sm-4">
 							<div>
@@ -59,7 +73,23 @@
 						mounted () {
 						    axios
 						      .get('http://localhost:8080/api/orders/waiting')
-						      .then(response => (this.orders = response.data))
+						      .then(response => {
+						    	  response.data.forEach(productOrder => productOrder.offerRegistered = false)
+						    	  this.orders = response.data
+						      })
+						},
+						methods: {
+							//This is the way of declaring functions/methods on Vue:
+							registerOffer: function(productOrder){
+							    axios
+							      .post('http://localhost:8080/api/offers', {
+							    	  orderId: productOrder.id,
+							    	  value: productOrder.productValue,
+							    	  deliveryDate: productOrder.deliveryDate,
+							    	  comment: productOrder.comment
+							      })
+							      .then(response => productOrder.offerRegistered = true);
+							}
 						}
 					}
 				)
